FIX: attempt to simplify chat navbar spacing
The main bug this commit is fixing is lack of spacing on the title "channels" when visiting the chat homepage on mobile.

--- a/plugins/chat/assets/stylesheets/mobile/chat-navbar.scss
+++ b/plugins/chat/assets/stylesheets/mobile/chat-navbar.scss
@@ -1,12 +1,10 @@
 .c-navbar {
-  gap: 0.75rem;
+  gap: 0.5rem;
+
   &-container {
     max-width: 100vw;
-    padding-inline: 0.25rem;
   }
-  &__actions {
-    margin-right: 0.5rem;
-  }
+
   &__back-button {
     align-self: stretch;
   }
